--- a/index.html
+++ b/index.html
@@ -24,25 +24,38 @@
     <div class="container-fluid">
       <div class="row">
         <div class="info-section col-md-6">
-          <h1>Sonusify</h1>
-          <h2>Your Dynamic Text-to-Speech Hub</h2>
+          <h1>ChromaSpeak</h1>
+          <h2>Your Vibrant Text-to-Voice Hub</h2>
           <p>
-            At Sonusify, transforming text into captivating speech is simple and
-            hassle-free. Whether you're a storyteller, educator, or
-            entrepreneur, our platform offers seamless text-to-speech conversion
-            tailored to your needs.
+            Discover ChromaVoice, where your text speaks vividly! Our platform
+            makes it effortless to turn written content into captivating audio,
+            infused with vibrant color to engage your audience. Whether you're a
+            creator, educator, or communicator, ChromaVoice offers a simple
+            solution to bring your words to life.
             <br />
             <br />
-            Just input your text, choose from a variety of voices and accents,
-            and customize parameters like speed and tone. Whether you're
-            creating podcasts, educational materials, or enhancing
-            accessibility, Sonusify empowers you to unleash the full potential
-            of your content. Join Sonusify today and experience the effortless
-            magic of text-to-speech conversion.
+            Just input your text, choose from various voices, and customize
+            settings to perfect your audio. With ChromaVoice, your content comes
+            alive as voices blend seamlessly with colors, creating an immersive
+            experience. From podcasts to educational materials, ChromaVoice
+            empowers you to add excitement to your creations. Join us today and
+            experience text-to-voice transformation made simple!
           </p>
         </div>
         <div class="speach-section col-md-6">
-          <textarea name="text" id="text" placeholder="Text to speech..."></textarea>
+          <select name="" id="select">
+            <option value="">hi</option>
+          </select>
+
+          <textarea
+            name="text"
+            id="text"
+            placeholder="Text to speech..."
+          ></textarea>
+
+          <button id="play-button" class="play-btn">
+            <i class="fas fa-play fa-fw"></i> Play
+          </button>
         </div>
       </div>
     </div>
@@ -63,6 +76,14 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
+    ></script>
+
+    <!-- font awesome -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
+      integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     ></script>
   </body>
 </html>
