--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="speach-section col-md-6">
           <select name="" id="select">
-            <option value="">hi</option>
+            <option value="">Select</option>
           </select>
 
           <textarea
