--- a/index.html
+++ b/index.html
@@ -43,8 +43,21 @@
           </p>
         </div>
         <div class="speach-section col-md-6">
-          <select name="" id="select">
+          <div class="selecter">
+            <select name="" id="select-lang"></select>
+            <select name="" id="select-pitch">
+            <option value="0.2">0.2</option>
+            <option value="0.4">0.4</option>
+            <option value="0.6">0.6</option>
+            <option value="0.8">0.8</option>
+            <option selected value="1.0">1.0</option>
+            <option value="1.2">1.2</option>
+            <option value="1.4">1.4</option>
+            <option value="1.6">1.6</option>
+            <option value="1.8">1.8</option>
+            <option value="2.0">2.0</option>
           </select>
+        </div>
 
           <textarea
             name="text"
