--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         </div>
         <div class="speach-section col-md-6">
           <div class="selecter">
-            <select name="" id="select-lang"></select>
+            <select name="" id="select-lang">
+              <option>Default English</option>
+            </select>
             <select name="" id="select-pitch">
             <option value="0.2">0.2</option>
             <option value="0.4">0.4</option>
